--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <div class="top-nav-bar-wrapper">
     <ul>
         <li><a href="">Deliver to Pakistan</a></li>
-        <li><input type="text"></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><input type="text" placeholder="Search"></li>
+        <li><a href="" id="dropdown" ondrag=" dropdown()">Hello,Sign in</a></li>
+        <li><a href="">Cart</a></li>
     </ul>
 </div><!-- /.top-nav-bar-wrapper -->
 
-
-    
  <script src="main.js"></script>   
 </body>
 </html>
