--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
      <link rel="stylesheet" href="./styles.css">
-    <title>Hello, world!</title>
   </head>
   <body>
   <div class="top-nav-bar bg-secondary">
@@ -16,7 +15,25 @@
         <li class="m-2 mx-3"><input type="text" placeholder="Search"></li>
         <li class="m-2 mx-3"><a href="" class="text-light">Delivery</a></li>
         <li class="m-2 mx-3"><a href="" class="text-light" id="showoverlay" onmouseover="showoverlay()" onmouseleave="hideoverlay()">Hello, Sign In</a></li>
-        <div class="overlay" id="overlay"></div>
+        <div class="overlay" id="overlay">
+          <div class="drop-box">
+            <button class="text-center">Sign in </button>
+            <div class="div-inner-wrapper">
+              <div class="inner">
+                <ul class="p-0 m-0">
+                  <li><a href="" class="text-dark p-2">Your Lists</a></li>
+                  <li><a href=""  class="text-dark p-2">Create a list</a></li>
+                  <li><a href=""  class="text-dark p-2">Find a list</a></li>
+                  <li><a href=""  class="text-dark p-2">Amazon smile charity list</a></li>
+                </ul>
+
+              </div><!-- /.inner -->
+
+            </div><!-- /.div-inner-wrapper -->
+  
+          </div><!-- /.drop-box -->
+        </div>
+       
         <li class="m-2 mx-3"><a href="" class="text-light">Cart</a></li>
     </ul>
   </div> <!-- /.top-nav-bar -->
