--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
         <li class="m-2 mx-3"><a href="" class="text-light">Cart</a></li>
     </ul>
-    <button  class="border-0 fs-4"><i class="bi bi-list"></i>
+    <button class="border-0 fs-4 bg-secondary fs-3"><i class=" bi-list"></i>
   </div> <!-- /.top-nav-bar -->
  <div class="side-menu d-flex">
-  <div class="side-bar-wrapper w-25 d-flex" id="box" >
+  <div class="side-bar-wrapper w-25 d-flex"id="box">
     <ul class="my-2">
       <h4>Digital content and devices</h4>
       <li class="p-2"><a href="">Amazon music</a></li>
@@ -69,7 +69,10 @@
       <li class="p-2"><a href=""># found it on Amazon</a></li>
     </ul>
    </div> <!-- /.side-bar-wrapper -->
-   <button  class="pt-2"><i onclick="hidebox()" class="bi bi-x-lg "></i></button>
+   <div class="cross">
+    <button onclick="hidebox()"><i class="bi bi-x-lg "></i></button>
+    </div><!-- /.cross -->
+   
 
  </div><!-- /.side-menu -->
     
