--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </div>
         <li class="m-2 mx-3"><a href="" class="text-light">Cart</a></li>
     </ul>
-    <button class="border-0 fs-4 bg-secondary fs-3"><i class=" bi-list"></i>
+    <button onclick="showbox()" class="border-0 fs-4 bg-secondary"><i class=" bi-list"></i>
   </div> <!-- /.top-nav-bar -->
  <div class="side-menu d-flex">
-  <div class="side-bar-wrapper w-25 d-flex"id="box">
+  <div class="side-bar-wrapper w-25"id="box">
     <ul class="my-2">
-      <h4>Digital content and devices</h4>
+      <h4>Digital content and devices</h4> 
       <li class="p-2"><a href="">Amazon music</a></li>
       <li class="p-2"><a href="">E-readers and books</a></li>
       <li class="p-2"><a href="">Amazon Appstore</a></li>
@@ -72,8 +72,8 @@
    <div class="cross">
     <button onclick="hidebox()"><i class="bi bi-x-lg "></i></button>
     </div><!-- /.cross -->
+  
    
-
  </div><!-- /.side-menu -->
     
    
